--- a/apps/inviwo/CMakeLists.txt
+++ b/apps/inviwo/CMakeLists.txt
@@ -154,6 +154,6 @@ ivw_mod_name_to_class(ivw_module_classes ${enabled_modules})
 ivw_private_create_pyconfig("${IVW_MODULE_DIR};${IVW_EXTERNAL_MODULES}" "${ivw_module_classes}" inviwo)
 ivw_deploy_qt(inviwo)
 
-if(IVW_PACKAGE_SELECT_APP STREQUAL PROJECT_NAME)
+if(IVW_PACKAGE_SELECT_APP STREQUAL "inviwo")
     include(packaging/packaging.cmake) # Package creation
 endif()
