--- a/tools/meta/CMakeLists.txt
+++ b/tools/meta/CMakeLists.txt
@@ -3,55 +3,55 @@ cmake_policy(VERSION 3.12.0)
 project(inviwo-meta VERSION 0.0.1 DESCRIPTION "CMakeList Parser" LANGUAGES CXX)
 
 if(NOT cxx_std_17 IN_LIST CMAKE_CXX_COMPILE_FEATURES)
-	message(STATUS "Will not build Inviwo meta since the used compiler does not have c++17 support")
-	return()
+    message(STATUS "Will not build Inviwo meta since the used compiler does not have c++17 support")
+    return()
 endif()
 
 find_package(Filesystem)
 if(NOT Filesystem_FOUND) 
-	message(STATUS "Will not build Inviwo meta since the used compiler does not have c++ filesystem support")
-	return()
+    message(STATUS "Will not build Inviwo meta since the used compiler does not have c++ filesystem support")
+    return()
 endif()
 
 include(CheckIncludeFileCXX)
 check_include_file_cxx(variant found_variant)
 if(NOT found_variant)
-	message(STATUS "Will not build Inviwo meta since the used compiler does not have c++ variant support")
-	return()
+    message(STATUS "Will not build Inviwo meta since the used compiler does not have c++ variant support")
+    return()
 endif()
 
-set_property(GLOBAL PROPERTY USE_FOLDERS On)
+set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 set_property(GLOBAL PROPERTY PREDEFINED_TARGETS_FOLDER cmake)
 
 set(headers
-	include/inviwo/meta/cmake/cmakefile.hpp
-	include/inviwo/meta/cmake/grammar.hpp
-	include/inviwo/meta/creator.hpp
-	include/inviwo/meta/filetemplates.hpp
-	include/inviwo/meta/inviwometadefine.hpp
-	include/inviwo/meta/inviwomodule.hpp 
-	include/inviwo/meta/inviwomoduleconf.hpp
-	include/inviwo/meta/inviwomoduleregistration.hpp 
-	include/inviwo/meta/iter/filteriterator.hpp
-	include/inviwo/meta/iter/iterutil.hpp
-	include/inviwo/meta/iter/range.hpp
-	include/inviwo/meta/iter/transformiterator.hpp
-	include/inviwo/meta/paths.hpp
-	include/inviwo/meta/util.hpp
-	include/inviwo/meta/includetools.hpp
+    include/inviwo/meta/cmake/cmakefile.hpp
+    include/inviwo/meta/cmake/grammar.hpp
+    include/inviwo/meta/creator.hpp
+    include/inviwo/meta/filetemplates.hpp
+    include/inviwo/meta/inviwometadefine.hpp
+    include/inviwo/meta/inviwomodule.hpp 
+    include/inviwo/meta/inviwomoduleconf.hpp
+    include/inviwo/meta/inviwomoduleregistration.hpp 
+    include/inviwo/meta/iter/filteriterator.hpp
+    include/inviwo/meta/iter/iterutil.hpp
+    include/inviwo/meta/iter/range.hpp
+    include/inviwo/meta/iter/transformiterator.hpp
+    include/inviwo/meta/paths.hpp
+    include/inviwo/meta/util.hpp
+    include/inviwo/meta/includetools.hpp
 )
 ivw_group("Header Files" BASE include/inviwo/meta ${headers})
 
 set(sources
-	src/cmake/cmakefile.cpp
-	src/creator.cpp
-	src/filetemplates.cpp
-	src/inviwomodule.cpp
-	src/inviwomoduleconf.cpp
-	src/inviwomoduleregistration.cpp
-	src/paths.cpp
-	src/util.cpp
-	src/includetools.cpp
+    src/cmake/cmakefile.cpp
+    src/creator.cpp
+    src/filetemplates.cpp
+    src/inviwomodule.cpp
+    src/inviwomoduleconf.cpp
+    src/inviwomoduleregistration.cpp
+    src/paths.cpp
+    src/util.cpp
+    src/includetools.cpp
 )
 ivw_group("Source Files" BASE src ${sources})
 
@@ -67,10 +67,10 @@ find_package(fmt REQUIRED)
 find_package(nlohmann_json CONFIG REQUIRED)
 
 target_link_libraries(inviwo-meta PUBLIC
-	std::filesystem 
-	inviwo::warn
-	fmt::fmt
-	nlohmann_json::nlohmann_json
+    std::filesystem 
+    inviwo::warn
+    fmt::fmt
+    nlohmann_json::nlohmann_json
 )
 
 # Add pegtL 
@@ -98,14 +98,14 @@ ivw_register_license_file(NAME "inja" VERSION 1.0.0 target inja MODULE Core EXT
 # Added cli app
 add_executable(inviwo-meta-cli src/main.cpp)
 target_link_libraries(inviwo-meta-cli 
-	inviwo::meta
-	inviwo::tclap
+    inviwo::meta
+    inviwo::tclap
 )
 
 # Add testing
 option(IVW_TEST_META_BUILD_TESTS "Build meta tests" ON)
 if(IVW_TESTS_META_BUILD_TESTS) 
-	add_subdirectory(tests)
+    add_subdirectory(tests)
 endif()
 
 ivw_default_install_comp_targets(core inviwo-meta)
