bring the test cmake option inline with others

--- a/modules/dataframepython/CMakeLists.txt
+++ b/modules/dataframepython/CMakeLists.txt
@@ -38,6 +38,6 @@ target_link_libraries(inviwo-module-dataframepython PUBLIC
 
 add_subdirectory(bindings)
 
-if(IVW_UNITTESTS)
+if(TARGET inviwo-unittests-dataframepython)
     add_dependencies(inviwo-unittests-dataframepython ivwdataframe inviwopy)
 endif()
