DataFrame: DataFrame converter (float32) * processor for converting DataFrame double columns to float32

--- a/modules/dataframe/CMakeLists.txt
+++ b/modules/dataframe/CMakeLists.txt
@@ -16,6 +16,7 @@ set(HEADER_FILES
     include/inviwo/dataframe/jsondataframeconversion.h
     include/inviwo/dataframe/processors/csvsource.h
     include/inviwo/dataframe/processors/dataframeexporter.h
+    include/inviwo/dataframe/processors/dataframefloat32converter.h
     include/inviwo/dataframe/processors/dataframejoin.h
     include/inviwo/dataframe/processors/dataframesource.h
     include/inviwo/dataframe/processors/imagetodataframe.h
@@ -41,6 +42,7 @@ set(SOURCE_FILES
     src/jsondataframeconversion.cpp
     src/processors/csvsource.cpp
     src/processors/dataframeexporter.cpp
+    src/processors/dataframefloat32converter.cpp
     src/processors/dataframejoin.cpp
     src/processors/dataframesource.cpp
     src/processors/imagetodataframe.cpp
