--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -10,3 +10,6 @@ endif()
 if(IVW_APP_PYTHON)
 	add_subdirectory(inviwopyapp)
 endif()
+if(IVW_APP_INVIWO_DOME)
+	add_subdirectory(inviwodome)
+endif()
