--- a/ext/CMakeLists.txt
+++ b/ext/CMakeLists.txt
@@ -317,6 +317,6 @@ if(Python3_Development_FOUND)
         ivw_register_package(pybind11 pybind11::embed)
     else()
         find_package(pybind11 CONFIG REQUIRED)
-        ivw_vcpkg_install(pybind11 COPYRIGHT copyright/LICENSE MODULE Core EXT)
+        ivw_vcpkg_install(pybind11 MODULE Core EXT)
     endif()
 endif()
