Actions: vcpkg testing

--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -3,28 +3,53 @@ name: CMake
 on: [push]
 
 env:
-  # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
   BUILD_TYPE: Release
+  VCPKG_SHA: '18ab4b72a26284f0df28295ce7bf9b21c96f20f4'
+  VCPKG_TRIPLET: 'x64-windows-static'
 
 jobs:
   build:
     runs-on: windows-latest
 
     steps:
-
-    - name: Vcpkg
-      uses: lukka/run-vcpkg@v4
-      id: runvcpkg
+    - name: Cache Vcpkg
+      uses: actions/cache@v2
       with:
-        vcpkgArguments: 'qt5[core,tools,svg] assimp benchmark cimg eigen3 fmt freetype glew glfw3 glm gtest hdf5[cpp,zlib] libjpeg-turbo libpng minizip nlohmann-json openexr pybind11 python3 tclap tiff tinydir tinyxml2 utfcpp zlib'
-        vcpkgTriplet: 'x64-windows-static'
-        vcpkgGitCommitId: '18ab4b72a26284f0df28295ce7bf9b21c96f20f4'
-
-    - name: Prints output of run-vcpkg's task
-      run: echo "root='${{ steps.runvcpkg.outputs.RUNVCPKG_VCPKG_ROOT_OUT }}', triplet='${{ steps.runvcpkg.outputs.RUNVCPKG_VCPKG_TRIPLET_OUT }}'"
-
-    - uses: lukka/get-cmake@latest
-
+        path: |
+          vcpkg
+          !vcpkg/buildtrees
+          !vcpkg/packages
+          !vcpkg/download
+        key: 'vcpkg-${{VCPKG_SHA}}'  
+  
+    - name: Cache Vcpkg binaries
+      uses: actions/cache@v2
+      with:
+        path: 'vcpkg-cache'
+        key: 'vcpkg-${{VCPKG-TRIPLET}}-${{VCPKG_SHA}}'  
+  
+    - name: VCPKG Clone
+      uses: actions/checkout@v2.3.2
+      with:
+        repository: 'https://github.com/microsoft/vcpkg.git'
+        ref: ${{VCPKG_SHA}}
+        path: vcpkg
+    
+    - name: VCPKG Bootstrap
+      shell: bash
+      working-directory: ${{runner.workspace}}/vcpkg
+      run: 'bootstrap-vcpkg.sh'
+    
+    - name: VCPKG Install
+      shell: bash
+      working-directory: ${{runner.workspace}}/vcpkg
+      run: > 
+        vcpkg --binarysource=files,../vcpkg-cache 
+        install fmt
+  
+    # qt5[core,tools,svg] assimp benchmark cimg eigen3 fmt freetype glew glfw3 glm gtest hdf5[cpp,zlib] libjpeg-turbo 
+    # libpng minizip nlohmann-json openexr pybind11 python3 tclap tiff tinydir tinyxml2 utfcpp zlib
+     
     - uses: actions/checkout@v2
       with: 
         path: inviwo
@@ -34,7 +59,8 @@ jobs:
       shell: bash
       working-directory: ${{runner.workspace}}/build
       run: >
-        cmake -S $GITHUB_WORKSPACE/inviwo 
+        cmake 
+          -S $GITHUB_WORKSPACE/inviwo 
           -B ${{runner.workspace}}/build 
           -DCMAKE_TOOLCHAIN_FILE==${{ steps.runvcpkg.outputs.RUNVCPKG_VCPKG_ROOT_OUT}}/scripts/buildsystems/vcpkg.cmake
           -DVCPKG_TARGET_TRIPLET='x64-windows-static'
