--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -20,13 +20,13 @@ jobs:
           !vcpkg/buildtrees
           !vcpkg/packages
           !vcpkg/download
-        key: 'vcpkg-${{VCPKG_SHA}}'  
+        key: 'vcpkg-${{ env.VCPKG_SHA }}'  
   
     - name: Cache Vcpkg binaries
       uses: actions/cache@v2
       with:
         path: 'vcpkg-cache'
-        key: 'vcpkg-${{VCPKG-TRIPLET}}-${{VCPKG_SHA}}'  
+        key: 'vcpkg-${{ env.VCPKG-TRIPLET }}-${{ env.VCPKG_SHA }}'  
   
     - name: VCPKG Clone
       uses: actions/checkout@v2.3.2
@@ -37,12 +37,12 @@ jobs:
     
     - name: VCPKG Bootstrap
       shell: bash
-      working-directory: ${{runner.workspace}}/vcpkg
+      working-directory: vcpkg
       run: 'bootstrap-vcpkg.sh'
     
     - name: VCPKG Install
       shell: bash
-      working-directory: ${{runner.workspace}}/vcpkg
+      working-directory: vcpkg
       run: > 
         vcpkg --binarysource=files,../vcpkg-cache 
         install fmt
