--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -5,8 +5,8 @@ on: [push]
 env:
   BUILD_TYPE: Release
   VCPKG_SHA: '18ab4b72a26284f0df28295ce7bf9b21c96f20f4'
-  VCPKG_DEFAULT_TRIPLET: 'x64-windows-static'                         # recognized by vcpkg
-  VCPKG_BINARY_SOURCES : 'files,${{ github.workspace }}/vcpkg-cache'  # recognized by vcpkg
+  VCPKG_DEFAULT_TRIPLET: 'x64-windows-static'                                   # recognized by vcpkg
+  VCPKG_BINARY_SOURCES : 'files,${{ github.workspace }}/vcpkg-cache,readwrite'  # recognized by vcpkg
 
 jobs:
   build:
@@ -26,8 +26,8 @@ jobs:
     - name: Cache Vcpkg binaries
       uses: inviwo/cache@v2
       with:
-        path: '${{ env.VCPKG_BINARY_SOURCES }}'
-        key: 'vcpkg-${{ env.VCPKG_DEFAULT_TRIPLET }}-${{ env.VCPKG_SHA }}'  
+        path: 'vcpkg-cache'
+        key: 'vcpkg-bin-cache'
   
     - name: VCPKG Clone
       uses: actions/checkout@v2.3.2
