Actions: more vcpkg packages

--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -12,17 +12,7 @@ jobs:
   build:
     runs-on: windows-latest
 
-    steps:
-    - name: Cache Vcpkg
-      uses: inviwo/cache@v3
-      with:
-        path: |
-          vcpkg
-          !vcpkg/buildtrees
-          !vcpkg/packages
-          !vcpkg/download
-        key: 'vcpkg-${{ env.VCPKG_SHA }}'  
-  
+    steps:  
     - name: Cache Vcpkg binaries
       uses: inviwo/cache@v3
       with:
@@ -46,7 +36,9 @@ jobs:
       working-directory: vcpkg
       run: > 
         vcpkg install 
-        fmt glm zlib assimp benchmark cimg freetype glew glfw3 glm gtest
+        assimp benchmark cimg eigen3 fmt freetype glew glfw3 glm gtest 
+        hdf5[cpp,zlib] libjpeg-turbo libpng minizip nlohmann-json 
+        openexr pybind11 python3 tclap tiff tinydir tinyxml2 utfcpp zlib
   
     # qt5[core,svg] assimp benchmark cimg eigen3 fmt freetype glew glfw3 glm gtest hdf5[cpp,zlib] libjpeg-turbo 
     # libpng minizip nlohmann-json openexr pybind11 python3 tclap tiff tinydir tinyxml2 utfcpp zlib
