Actions: install qt5

--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -46,6 +46,27 @@ jobs:
     # qt5[core,svg] assimp benchmark cimg eigen3 fmt freetype glew glfw3 glm gtest hdf5[cpp,zlib] libjpeg-turbo 
     # libpng minizip nlohmann-json openexr pybind11 python3 tclap tiff tinydir tinyxml2 utfcpp zlib
      
+    - name: Cache Qt
+      id: cache-qt
+      uses: actions/cache@v2
+      with:
+        path: ../Qt
+        key: ${{ runner.os }}-QtCache
+     
+    - name: Install Qt
+      uses: jurplel/install-qt-action@v2
+      with:
+        version: 5.15.0
+        cached: ${{ steps.cache-qt.outputs.cache-hit }}
+      
+    - name: Log
+      shell: bash
+      run: |
+        pwd
+        ls -al
+        ls -al ..
+        echo $Qt5_DIR
+     
     - uses: actions/checkout@v2
       with: 
         path: inviwo
