--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -42,46 +42,29 @@ jobs:
         assimp benchmark cimg eigen3 fmt freetype glew glfw3 glm gtest 
         hdf5[cpp,zlib] libjpeg-turbo libpng minizip nlohmann-json 
         openexr pybind11 python3 tclap tiff tinydir tinyxml2 utfcpp zlib
-       
-    - name: Cache Qt
-      id: cache-qt
-      uses: actions/cache@v2
-      with:
-        path: ../Qt
-        key: ${{ runner.os }}-QtCache
      
     - name: Install Qt
       uses: jurplel/install-qt-action@v2
       with:
         version: 5.15.0
         dir: ${{ github.workspace }}
-        cached: ${{ steps.cache-qt.outputs.cache-hit }}
       
-    - name: Log
-      shell: bash
-      run: |
-        echo 'dir'
-        pwd
-        echo 'ls .'
-        ls -al
-        echo 'ls ..'
-        ls -al ..
-        echo $Qt5_DIR
+    #$Qt5_DIR
      
     - uses: actions/checkout@v2
       with: 
         path: inviwo
         submodules: recursive
         
-    #- name: Configure CMake
-    #  shell: bash
-    #  run: >
-    #    cmake -S inviwo -B build 
-    #      -DCMAKE_TOOLCHAIN_FILE=vcpkg/scripts/buildsystems/vcpkg.cmake
-    #      -DVCPKG_TARGET_TRIPLET='x64-windows-static'
-    #      -DCMAKE_BUILD_TYPE=$BUILD_TYPE
+    - name: Configure CMake
+      shell: bash
+      run: >
+        cmake -S inviwo -B build 
+          -DCMAKE_TOOLCHAIN_FILE=vcpkg/scripts/buildsystems/vcpkg.cmake
+          -DVCPKG_TARGET_TRIPLET='x64-windows-static'
+          -DCMAKE_BUILD_TYPE=$BUILD_TYPE
           
-    #- name: Build
-    #  working-directory: build
-    #  shell: bash
-    #  run: cmake --build . --config $BUILD_TYPE
+    - name: Build
+      working-directory: build
+      shell: bash
+      run: cmake --build . --config $BUILD_TYPE
