--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -60,9 +60,27 @@ jobs:
       shell: bash
       run: >
         cmake -S inviwo -B build 
-          -DCMAKE_TOOLCHAIN_FILE=vcpkg/scripts/buildsystems/vcpkg.cmake
+          '-DCMAKE_TOOLCHAIN_FILE=${{ github.workspace }}/vcpkg/scripts/buildsystems/vcpkg.cmake'
           -DVCPKG_TARGET_TRIPLET='x64-windows-static'
           -DCMAKE_BUILD_TYPE=$BUILD_TYPE
+          -DIVW_USE_EXTERNAL_ASSIMP=ON
+          -DIVW_USE_EXTERNAL_BENCHMARK=ON
+          -DIVW_USE_EXTERNAL_EIGEN=ON
+          -DIVW_USE_EXTERNAL_FMT=ON
+          -DIVW_USE_EXTERNAL_FREETYPE=ON
+          -DIVW_USE_EXTERNAL_GLFW=ON
+          -DIVW_USE_EXTERNAL_GLM=ON
+          -DIVW_USE_EXTERNAL_GTEST=ON
+          -DIVW_USE_EXTERNAL_HDF5=ON
+          -DIVW_USE_EXTERNAL_IMG=ON
+          -DIVW_USE_EXTERNAL_JSON=ON
+          -DIVW_USE_EXTERNAL_CIMG=ON
+          -DIVW_USE_EXTERNAL_GLEW=ON
+          -DIVW_USE_EXTERNAL_TCLAP=ON
+          -DIVW_USE_EXTERNAL_UTFCPP=ON
+          -DIVW_USE_EXTERNAL_TINYDIR=ON
+          -DIVW_USE_EXTERNAL_PYBIND11=ON
+          -DIVW_USE_EXTERNAL_OPENEXR=ON
           
     - name: Build
       working-directory: build
