--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -61,7 +61,7 @@ jobs:
       run: >
         cmake -S inviwo -B build 
         -DVCPKG_TARGET_TRIPLET=x64-windows-static
-        -DCMAKE_TOOLCHAIN_FILE=${{ github.workspace }}/vcpkg/scripts/buildsystems/vcpkg.cmake
+        '-DCMAKE_TOOLCHAIN_FILE=${{ github.workspace }}/vcpkg/scripts/buildsystems/vcpkg.cmake'
         -DCMAKE_BUILD_TYPE=$BUILD_TYPE
         -DIVW_CFG_CMAKE_DEBUG=ON
         -DIVW_CFG_PRECOMPILED_HEADERS=OFF
